--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
-baseurl: "" # the subpath of your site, e.g. /blog/
+-baseurl: "/baww-com.github.io/" # the subpath of your site, e.g. /blog/
+url: "https://baww-com.github.io/” # the base hostname & protocol for your site
 theme: jekyll-theme-cayman
